2011-08-30  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:    Make SHLIB_LD_LIBS='${LIBS}' the default and
	* unix/configure: set to "" on per-platform necessary basis.
	Add Haiku support and better NetBSD/FreeBSD support.
	All of this backported from TEA resp. Tcl8.5, but kept all
	original platform code which was removed from TEA.

2011-08-22  Andreas Kupries  <andreask@activestate.com>

	* win/tclWinDde.c (Tcl_DdeObjCmd): Fixed use of the C99 feature
	(Variable declaration within statement block) rejected by
	MSVC6. Moved the declaration to the beginning of the block.

2011-08-18  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclUniData.c: [Bug 3393714] overflow in toupper delta
	* tools/uniParse.tcl
	* tests/utf.test

2011-08-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclCmdAH.c:    [Bug 3388350] mingw64 compiler warnings
	* generic/tclFCmd.c      In mingw, sys/stat.h must be included
	* generic/tclFileName.c  before winsock2.h, so make sure of that.
	* generic/tclIOUtil.c
	* generic/tclTest.c
	* win/tclWin32Dll.c
	* win/tclWinChan.c
	* win/tclWinDde.c
	* win/tclWinFCmd.c

2011-08-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c: [Bug 3390272] Leak of [info script] value.

2011-08-15  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:       [Bug 3388350] mingw64 compiler warnings
	* win/configure.in
	* win/configure
	* win/tclMtherr.c
	* win/tclWinPort.h
	* win/tclWinChan.c
	* win/tclWinDde.c
	* win/tclWinFCmd.c
	* win/tclWinPipe.c
	* win/tclWinReg.c
	* win/tclWinSerial.c
	* win/tclWinSock.c
	* win/tclWinTest.c
	* win/tclWinTime.c
	* generic/tclPosixStr.c
	* unix/tcl.m4:      Quoting and AC_DEFINE fixes (All backported from
	* unix/configure    Tcl 8.5

2011-07-21  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinPort.h: [Bug 3372130] Fix hypot math function with MSVC10

2011-07-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompile.c: Avoid segfaults when RecordByteCodeStats()