@@ -1,3 +1,10 @@
+2011-09-06  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tcl.decls: Tcl_HashStats does not return a CONST
+	* generic/tclDecls.h (Backported from Tcl 8.5)
+	* generic/tclHash.c
+	* generic/tclVar.c
+
 2011-08-30  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* unix/tcl.m4:    Make SHLIB_LD_LIBS='${LIBS}' the default and
